src/objects/Selection_Records__c.object
<CustomObject>
    <fields>
        <fullName>App_Date_Time__c</fullName>
        <label>App Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bed_Rooms__c</fullName>
        <label># Bed Rooms</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Ethnicity__c</fullName>
        <label>HH Ethnicity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Income__c</fullName>
        <label>HH Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HH_Occ__c</fullName>
        <label>Total People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Target__c</fullName>
        <label>Income Target</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Rank__c</fullName>
        <label>Lottery Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pref_Points__c</fullName>
        <label>Pref Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <label>Prospect</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAD_Wait_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wait List</label>
        <referenceTo>Enrolled_Wait_List__c</referenceTo>
        <relationshipLabel>Selection Records</relationshipLabel>
        <relationshipName>Selection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident__c</fullName>
        <label>Resident</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Selection_ID__c</fullName>
        <label>Wait List Selection</label>
        <referenceTo>Wait_List_Selection__c</referenceTo>
        <relationshipLabel>Selection Records</relationshipLabel>
        <relationshipName>Selection_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Selection Record</label>
    <nameField>
        <displayFormat>SL-{0000000000}</displayFormat>
        <label>Selection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selection Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>